@startuml

title __PROFILE's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace profile {
        class Profile {
            + Profile()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace profile {
        class profileContent {
            + profileContent()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace profile {
        class profileInformation {
            + profileInformation()
        }
      }
    }
  }
  

  Profile -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  profileContent -up-|> com.vaadin.flow.component.orderedlayout.HorizontalLayout
  profileInformation .up.|> com.vaadin.flow.component.HasSize
  profileInformation -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
